undefined problem solved, loading function, footer styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,32 @@
+@import './sass/variables';
+@import './sass/reset';
 
-@import './sass/reset'
+body{
+    background-color: $first;
+}
+
+.loading{
+    text-align: center;
+    font-size:4rem;
+    align-items: center;
+    justify-content: center;
+    display: inline;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: $fourth;
+}
+
+.footer{
+    background-color: $first;
+    color: $fourth;
+    display: inline;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    font-size: 1.1rem;
+    span{
+        color: $second
+    };
+}
